fixed nav bar visibility

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -13,3 +13,12 @@
 	bottom: 0;
 	right: 0;
 }
+
+.pos-r {
+	position: relative;
+}
+
+.vert-middle
+{
+	padding-top: .7em;
+}
